# Belvedere

./: .gitignore  Guidance.ipynb  README.md  deps.edn  pyproject.toml
db/: agents.edn
dev/: portal.clj  scratch.clj  user.clj
prompts/: qa-doc.txt
scyan_py/: url_to_markdown.py
src/: scratch.clj
src/Belvedere/: docsearch.clj  llama.clj  load.clj  maestro.clj  md.clj  obsidian.clj  openai.clj  pinecone.clj  prompts.clj  scrape.clj  supabase.clj  wa.clj
src/Scyan/: docs.clj  docsearch.clj  guidance.clj  llama.clj  load.clj  maestro.clj  maths.clj  md.clj  obsidian.clj  openai.clj  pg.clj  pinecone.clj  portal.clj  prompts.clj  redis.clj  scrape.clj  scy_mem.clj  search.clj  self_chat.clj  server.clj  smart_fn.clj  supabase.clj  super_fn.clj  wa.clj
src/sql/: console.sql  docs.sql  search.sql
